--- a/src/plugs/SpellCheck/Source/Version.rc
+++ b/src/plugs/SpellCheck/Source/Version.rc
@@ -26,7 +26,7 @@ LANGUAGE LANG_RUSSIAN, SUBLANG_DEFAULT
 // Dialog
 //
 
-IDD_SETTINGS DIALOGEX 0, 0, 200, 135
+IDD_SETTINGS DIALOGEX 0, 0, 334, 135
 STYLE DS_SETFONT | DS_MODALFRAME | DS_3DLOOK | DS_FIXEDSYS | DS_CENTER | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Проверка орфографии: настройка"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
@@ -43,6 +43,11 @@ BEGIN
     LTEXT           "Путь к ядру Aspell",IDC_STATIC,7,89,63,8
     EDITTEXT        IDC_CORE,7,97,166,14,ES_AUTOHSCROLL
     PUSHBUTTON      "...",IDC_BROWSE,174,97,19,12
+    LTEXT           "Непроверять в фоне словарями",IDC_STATIC,197,3,114,8
+    EDITTEXT        IDC_NOBGEDIT,197,12,133,14,ES_AUTOHSCROLL
+    LISTBOX         IDC_NOBG,197,48,133,81,LBS_SORT | LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_TABSTOP
+    PUSHBUTTON      "Добавить",IDC_NOBGADD,197,31,50,14
+    PUSHBUTTON      "Удалить",IDC_NOBGREM,280,31,50,14
     DEFPUSHBUTTON   "OK",IDOK,7,117,50,14
     PUSHBUTTON      "Отмена",IDCANCEL,143,117,50,14
     PUSHBUTTON      "Тест",IDC_PROBE,76,117,50,14
@@ -69,8 +74,8 @@ END
 //
 
 VS_VERSION_INFO VERSIONINFO
- FILEVERSION 1,15,0,0
- PRODUCTVERSION 1,15,0,0
+ FILEVERSION 1,16,0,0
+ PRODUCTVERSION 1,16,0,0
  FILEFLAGSMASK 0x17L
 #ifdef _DEBUG
  FILEFLAGS 0x1L
@@ -87,12 +92,12 @@ BEGIN
         BEGIN
             VALUE "Comments", "Юникод версия"
             VALUE "FileDescription", "SpellCheck: проверка орфографии в AkelPad на базе ASpell"
-            VALUE "FileVersion", "1, 15, 0, 0"
+            VALUE "FileVersion", "1, 16, 0, 0"
             VALUE "InternalName", "SpellCheck.dll"
-            VALUE "LegalCopyright", " (c) Паныч Я.В. 2010-2012"
+            VALUE "LegalCopyright", " (c) Паныч Я.В. 2010-2013"
             VALUE "OriginalFilename", "SpellCheck.dll"
             VALUE "ProductName", "SpellCheck: проверка орфографии в AkelPad на базе ASpell"
-            VALUE "ProductVersion", "1, 15, 0, 0"
+            VALUE "ProductVersion", "1, 16, 0, 0"
         END
     END
     BLOCK "VarFileInfo"
@@ -149,7 +154,7 @@ LANGUAGE LANG_UKRAINIAN, SUBLANG_DEFAULT
 // Dialog
 //
 
-IDD_SETTINGS DIALOGEX 0, 0, 200, 135
+IDD_SETTINGS DIALOGEX 0, 0, 334, 135
 STYLE DS_SETFONT | DS_MODALFRAME | DS_3DLOOK | DS_FIXEDSYS | DS_CENTER | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Перевірка правопису"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
@@ -167,6 +172,11 @@ BEGIN
     LTEXT           "Шлях до ядра Aspell",IDC_STATIC,7,89,70,8
     EDITTEXT        IDC_CORE,7,97,166,14,ES_AUTOHSCROLL
     PUSHBUTTON      "...",IDC_BROWSE,174,97,19,12
+    LTEXT           "Не перевіряти у фоні словниками",IDC_STATIC,197,3,114,8
+    EDITTEXT        IDC_NOBGEDIT,197,12,133,14,ES_AUTOHSCROLL
+    LISTBOX         IDC_NOBG,197,48,133,81,LBS_SORT | LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_TABSTOP
+    PUSHBUTTON      "Додати",IDC_NOBGADD,197,31,50,14
+    PUSHBUTTON      "Видалити",IDC_NOBGREM,280,31,50,14
     DEFPUSHBUTTON   "OK",IDOK,7,117,50,14
     PUSHBUTTON      "Відміна",IDCANCEL,143,117,50,14
     PUSHBUTTON      "Тест",IDC_PROBE,76,117,50,14
@@ -179,7 +189,7 @@ FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
     EDITTEXT        IDC_MISSSPELL,7,7,142,14,ES_AUTOHSCROLL
     LISTBOX         IDC_SUGLIST,7,29,142,149,LBS_SORT | LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_TABSTOP
-    DEFPUSHBUTTON   "Приняти",IDOK,160,7,50,14
+    DEFPUSHBUTTON   "Прийняти",IDOK,160,7,50,14
     PUSHBUTTON      "Пропустити",IDCANCEL,160,29,50,14
     PUSHBUTTON      "Закрити",IDC_CANCELALL,160,52,50,14,BS_CENTER
     PUSHBUTTON      "Запам'ятати",IDC_MEM,160,75,50,14
@@ -193,8 +203,8 @@ END
 //
 
 VS_VERSION_INFO VERSIONINFO
- FILEVERSION 1,15,0,0
- PRODUCTVERSION 1,15,0,0
+ FILEVERSION 1,16,0,0
+ PRODUCTVERSION 1,16,0,0
  FILEFLAGSMASK 0x17L
 #ifdef _DEBUG
  FILEFLAGS 0x1L
@@ -211,12 +221,12 @@ BEGIN
         BEGIN
             VALUE "Comments", "Юнікод версія"
             VALUE "FileDescription", "SpellCheck: перевірка орфографії у AkelPad на базі ASpell"
-            VALUE "FileVersion", "1, 15, 0, 0"
+            VALUE "FileVersion", "1, 16, 0, 0"
             VALUE "InternalName", "SpellCheck.dll"
-            VALUE "LegalCopyright", " (c) Панич Я.В. 2010-2012"
+            VALUE "LegalCopyright", " (c) Панич Я.В. 2010-2013"
             VALUE "OriginalFilename", "SpellCheck.dll"
             VALUE "ProductName", "SpellCheck: перевірка орфографії у AkelPad на базі ASpell"
-            VALUE "ProductVersion", "1, 15, 0, 0"
+            VALUE "ProductVersion", "1, 16, 0, 0"
         END
     END
     BLOCK "VarFileInfo"
@@ -296,7 +306,7 @@ END
 STRINGTABLE 
 BEGIN
     IDS_NOASPELL            "ASpell не знайдено"
-    IDS_NOMISSSPELL         "Поимлок не знайдено"
+    IDS_NOMISSSPELL         "Помилок не знайдено"
     IDS_NOVARIANT           "Варіантів не знайдено"
 END
 
@@ -318,7 +328,7 @@ LANGUAGE LANG_ENGLISH, SUBLANG_ENGLISH_US
 // Dialog
 //
 
-IDD_SETTINGS DIALOGEX 0, 0, 200, 135
+IDD_SETTINGS DIALOGEX 0, 0, 334, 135
 STYLE DS_SETFONT | DS_MODALFRAME | DS_3DLOOK | DS_FIXEDSYS | DS_CENTER | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "SpellCheck: Settings"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
@@ -335,6 +345,11 @@ BEGIN
     LTEXT           "Aspell core path",IDC_STATIC,7,89,52,8
     EDITTEXT        IDC_CORE,7,97,166,14,ES_AUTOHSCROLL
     PUSHBUTTON      "...",IDC_BROWSE,174,97,19,12
+    LTEXT           "Dicts. disabled in background check",IDC_STATIC,197,3,114,8
+    EDITTEXT        IDC_NOBGEDIT,197,12,133,14,ES_AUTOHSCROLL
+    LISTBOX         IDC_NOBG,197,48,133,81,LBS_SORT | LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_TABSTOP
+    PUSHBUTTON      "Add",IDC_NOBGADD,197,31,50,14
+    PUSHBUTTON      "Remove",IDC_NOBGREM,280,31,50,14
     DEFPUSHBUTTON   "OK",IDOK,7,117,50,14
     PUSHBUTTON      "Cancel",IDCANCEL,143,117,50,14
     PUSHBUTTON      "Test",IDC_PROBE,76,117,50,14
@@ -361,8 +376,8 @@ END
 //
 
 VS_VERSION_INFO VERSIONINFO
- FILEVERSION 1,15,0,0
- PRODUCTVERSION 1,15,0,0
+ FILEVERSION 1,16,0,0
+ PRODUCTVERSION 1,16,0,0
  FILEFLAGSMASK 0x37L
 #ifdef _DEBUG
  FILEFLAGS 0x21L
@@ -379,23 +394,23 @@ BEGIN
         BEGIN
             VALUE "Comments", "Unicode version"
             VALUE "FileDescription", "SpellCheck: ASpell based spellchecker for AkelPad"
-            VALUE "FileVersion", "1, 15, 0, 0"
+            VALUE "FileVersion", "1, 16, 0, 0"
             VALUE "InternalName", "SpellCheck.dll"
-            VALUE "LegalCopyright", " (c) Panych Y.W. 2010-2012"
+            VALUE "LegalCopyright", " (c) Panych Y.W. 2010-2013"
             VALUE "OriginalFilename", "SpellCheck.dll"
             VALUE "ProductName", "SpellCheck: ASpell based spellchecker for AkelPad"
-            VALUE "ProductVersion", "1, 15, 0, 0"
+            VALUE "ProductVersion", "1, 16, 0, 0"
         END
         BLOCK "000904b0"
         BEGIN
             VALUE "Comments", "Unicode version"
             VALUE "FileDescription", "SpellCheck: ASpell based spellchecker for AkelPad"
-            VALUE "FileVersion", "1, 15, 0, 0"
+            VALUE "FileVersion", "1, 16, 0, 0"
             VALUE "InternalName", "SpellCheck.dll"
-            VALUE "LegalCopyright", " (c) Panych Y.W. 2010-2012"
+            VALUE "LegalCopyright", " (c) Panych Y.W. 2010-2013"
             VALUE "OriginalFilename", "SpellCheck.dll"
             VALUE "ProductName", "SpellCheck: ASpell based spellchecker for AkelPad"
-            VALUE "ProductVersion", "1, 15, 0, 0"
+            VALUE "ProductVersion", "1, 16, 0, 0"
         END
     END
     BLOCK "VarFileInfo"
@@ -415,9 +430,12 @@ GUIDELINES DESIGNINFO
 BEGIN
     IDD_SETTINGS, DIALOG
     BEGIN
+        RIGHTMARGIN, 330
         VERTGUIDE, 7
         VERTGUIDE, 174
         VERTGUIDE, 193
+        VERTGUIDE, 197
+        VERTGUIDE, 330
         HORZGUIDE, 12
         HORZGUIDE, 24
         HORZGUIDE, 96
