--- a/old/2.2.1a/src/akelpad.vcxproj.filters
+++ b/old/2.2.1a/src/akelpad.vcxproj.filters
@@ -50,4 +50,9 @@
       <Filter>Resource Files</Filter>
     </ResourceCompile>
   </ItemGroup>
+  <ItemGroup>
+    <Image Include="AKELPAD.ICO">
+      <Filter>Resource Files</Filter>
+    </Image>
+  </ItemGroup>
 </Project>
