--- a/src/plugs/SpecialChar/Source/Resources/SpecialChar.rc
+++ b/src/plugs/SpecialChar/Source/Resources/SpecialChar.rc
@@ -43,30 +43,59 @@ IDI_ICON_PLUGIN         ICON    DISCARDABLE     "SpecialChar.ico"
 // Dialog
 //
 
-IDD_SETUP DIALOGEX 70, 70, 250, 122
+IDD_SETUP DIALOGEX 70, 70, 395, 204
 STYLE DS_MODALFRAME | DS_3DLOOK | DS_CENTER | WS_POPUP | WS_VISIBLE | 
     WS_CAPTION | WS_SYSMENU
 FONT 8, "MS Shell Dlg"
 BEGIN
-    LISTBOX         IDC_LIST,10,11,110,79,LBS_NOINTEGRALHEIGHT | WS_VSCROLL | 
+    LISTBOX         IDC_LIST,10,11,109,163,LBS_NOINTEGRALHEIGHT | WS_VSCROLL | 
                     WS_TABSTOP
-    GROUPBOX        "",IDC_STATIC,129,7,110,84
-    CONTROL         "",IDC_COLOR_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,
-                    137,22,10,10
-    CONTROL         "",IDC_COLOR_BUTTON,"Button",BS_OWNERDRAW | WS_TABSTOP,
-                    149,21,11,11,WS_EX_STATICEDGE
-    LTEXT           "",IDC_COLOR_LABEL,164,22,70,8
-    CONTROL         "",IDC_SELCOLOR_CHECK,"Button",BS_AUTOCHECKBOX | 
-                    WS_TABSTOP,137,41,10,10
-    CONTROL         "",IDC_SELCOLOR_BUTTON,"Button",BS_OWNERDRAW | 
-                    WS_TABSTOP,149,40,11,11,WS_EX_STATICEDGE
-    LTEXT           "",IDC_SELCOLOR_LABEL,164,41,70,8
-    CONTROL         "",IDC_DOTTEDLINE_CHECK,"Button",BS_AUTOCHECKBOX | 
-                    WS_TABSTOP,137,59,93,10
-    EDITTEXT        IDC_CHAR_EDIT,137,69,24,12,ES_CENTER | ES_AUTOHSCROLL
-    LTEXT           "",IDC_CHAR_LABEL,165,71,70,8
-    PUSHBUTTON      "",IDOK,73,100,50,14,BS_CENTER
-    PUSHBUTTON      "",IDCANCEL,127,100,50,14,BS_CENTER
+    LTEXT           "",IDC_NAME_LABEL,133,12,117,8
+    EDITTEXT        IDC_NAME_EDIT,131,25,119,14,ES_AUTOHSCROLL
+    GROUPBOX        "",IDC_OLDCHAR_GROUP,131,49,119,94
+    CONTROL         "",IDC_OLDCHARHEX_RADIO,"Button",BS_AUTORADIOBUTTON,140,
+                    66,102,10
+    CONTROL         "",IDC_OLDCHARSPECIAL_RADIO,"Button",BS_AUTORADIOBUTTON,
+                    140,105,101,10
+    LTEXT           "\\x",IDC_OLDCHARHEXPREFIX_LABEL,151,83,8,8
+    EDITTEXT        IDC_OLDCHARHEX_EDIT,160,80,58,12,ES_AUTOHSCROLL
+    CTEXT           "",IDC_OLDCHARHEX_PREVIEW,221,80,20,12,0,
+                    WS_EX_STATICEDGE
+    COMBOBOX        IDC_OLDCHARSPECIAL_COMBO,151,119,90,58,CBS_DROPDOWNLIST | 
+                    WS_VSCROLL | WS_TABSTOP
+    CONTROL         "",IDC_SOLIDINDENTLINE_CHECK,"Button",BS_AUTOCHECKBOX | 
+                    WS_TABSTOP,131,152,117,10
+    GROUPBOX        "",IDC_NEWCHAR_GROUP,263,12,119,161
+    LTEXT           "",IDC_NEWCHARHEX_LABEL,273,28,101,8
+    LTEXT           "\\x",IDC_NEWCHARHEXPREFIX_LABEL,279,43,8,8
+    EDITTEXT        IDC_NEWCHARHEX_EDIT,287,41,61,12,ES_AUTOHSCROLL
+    CTEXT           "",IDC_NEWCHARHEX_PREVIEW,351,41,20,12,0,
+                    WS_EX_STATICEDGE
+    CONTROL         "",IDC_NEWCHARBASICTEXT_CHECK,"Button",BS_AUTOCHECKBOX | 
+                    WS_GROUP | WS_TABSTOP,273,63,100,10
+    CONTROL         "",IDC_NEWCHARBASICTEXTCUSTOM_RADIO,"Button",
+                    BS_AUTORADIOBUTTON,276,79,10,10
+    CONTROL         "",IDC_NEWCHARBASICTEXTDEFAULT_RADIO,"Button",
+                    BS_AUTORADIOBUTTON,304,80,71,8
+    CONTROL         "",IDC_NEWCHARBASICTEXTCUSTOM_BUTTON,"Button",
+                    BS_OWNERDRAW | WS_TABSTOP,288,78,11,11,WS_EX_STATICEDGE
+    CONTROL         "",IDC_NEWCHARSELTEXT_CHECK,"Button",BS_AUTOCHECKBOX | 
+                    WS_GROUP | WS_TABSTOP,273,101,100,10
+    CONTROL         "",IDC_NEWCHARSELTEXTCUSTOM_RADIO,"Button",
+                    BS_AUTORADIOBUTTON,277,117,10,10
+    CONTROL         "",IDC_NEWCHARSELTEXTDEFAULT_RADIO,"Button",
+                    BS_AUTORADIOBUTTON,305,118,71,8
+    CONTROL         "",IDC_NEWCHARSELTEXTCUSTOM_BUTTON,"Button",BS_OWNERDRAW | 
+                    WS_TABSTOP,289,117,11,11,WS_EX_STATICEDGE
+    LTEXT           "",IDC_NEWCHARFONTSTYLE_LABEL,275,138,100,8
+    COMBOBOX        IDC_NEWCHARFONTSTYLE_COMBO,273,150,98,58,
+                    CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
+    PUSHBUTTON      "",IDC_ADDMODIFY_BUTTON,12,183,50,14,BS_CENTER
+    PUSHBUTTON      "",IDC_DELETE_BUTTON,66,183,50,14,BS_CENTER
+    CONTROL         "",IDC_CODERTHEME_CHECK,"Button",BS_AUTOCHECKBOX | 
+                    WS_TABSTOP,131,165,117,10
+    DEFPUSHBUTTON   "",IDOK,273,183,50,14,BS_CENTER
+    PUSHBUTTON      "",IDCANCEL,327,183,50,14,BS_CENTER
 END
 
 
