--- a/src/akelupdater/Source/Resources/AkelUpdater.rc
+++ b/src/akelupdater/Source/Resources/AkelUpdater.rc
@@ -27,8 +27,8 @@ LANGUAGE LANG_ENGLISH, SUBLANG_ENGLISH_US
 //
 
 IDD_SETUP DIALOG DISCARDABLE  0, 0, 286, 270
-STYLE DS_3DLOOK | DS_CENTER | WS_POPUP | WS_VISIBLE | WS_CAPTION | 
-    WS_SYSMENU | WS_THICKFRAME
+STYLE DS_3DLOOK | DS_CENTER | WS_POPUP | WS_CAPTION | WS_SYSMENU | 
+    WS_THICKFRAME
 FONT 8, "MS Shell Dlg"
 BEGIN
     CONTROL         "List1",IDC_LIST_DLL,"SysListView32",LVS_REPORT | 
